re-factor: change from position fixed to absolute
The button is there but is not visible, probably covered by background image.

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -38,7 +38,7 @@
 }
 
 #btn-to-top {
-	position: fixed;
+  position: absolute;
   bottom: 25px;
   right: 25px;
   background-color: var(--header-color);
